Package_Tools/include-C/efl/fertig/elementary-1/inarbeit/fertig/elm_calendar_eo_legacy.h

typedef Eo Elm_Calendar;
typedef enum
{
  ELM_CALENDAR_UNIQUE = 0, 
  ELM_CALENDAR_DAILY, 
  ELM_CALENDAR_WEEKLY, 
  ELM_CALENDAR_MONTHLY, 
  ELM_CALENDAR_ANNUALLY, 
  ELM_CALENDAR_LAST_DAY_OF_MONTH, 
  ELM_CALENDAR_REVERSE_DAILY 
} Elm_Calendar_Mark_Repeat_Type;
typedef enum
{
  ELM_DAY_SUNDAY = 0, 
  ELM_DAY_MONDAY, 
  ELM_DAY_TUESDAY, 
  ELM_DAY_WEDNESDAY, 
  ELM_DAY_THURSDAY, 
  ELM_DAY_FRIDAY, 
  ELM_DAY_SATURDAY, 
  ELM_DAY_LAST 
} Elm_Calendar_Weekday;
typedef enum
{
  ELM_CALENDAR_SELECT_MODE_DEFAULT = 0, 
  ELM_CALENDAR_SELECT_MODE_ALWAYS, 
  ELM_CALENDAR_SELECT_MODE_NONE, 
  ELM_CALENDAR_SELECT_MODE_ONDEMAND 
} Elm_Calendar_Select_Mode;
typedef enum
{
  ELM_CALENDAR_SELECTABLE_NONE = 0, 
  ELM_CALENDAR_SELECTABLE_YEAR = 1 , 
  ELM_CALENDAR_SELECTABLE_MONTH = 2 , 
  ELM_CALENDAR_SELECTABLE_DAY = 4  
} Elm_Calendar_Selectable;
typedef struct _Elm_Calendar_Mark Elm_Calendar_Mark;
extern void elm_calendar_first_day_of_week_set(Elm_Calendar *obj, Elm_Calendar_Weekday day);
extern Elm_Calendar_Weekday elm_calendar_first_day_of_week_get(const Elm_Calendar *obj);
extern void elm_calendar_selectable_set(Elm_Calendar *obj, Elm_Calendar_Selectable selectable);
extern Elm_Calendar_Selectable elm_calendar_selectable_get(const Elm_Calendar *obj);
extern void elm_calendar_interval_set(Elm_Calendar *obj, double interval);
extern double elm_calendar_interval_get(const Elm_Calendar *obj);
extern void elm_calendar_weekdays_names_set(Elm_Calendar *obj, const char **weekdays);
extern const char **elm_calendar_weekdays_names_get(const Elm_Calendar *obj);
extern void elm_calendar_select_mode_set(Elm_Calendar *obj, Elm_Calendar_Select_Mode mode);
extern Elm_Calendar_Select_Mode elm_calendar_select_mode_get(const Elm_Calendar *obj);
extern void elm_calendar_format_function_set(Elm_Calendar *obj, Elm_Calendar_Format_Cb format_function);
extern const Eina_List *elm_calendar_marks_get(const Elm_Calendar *obj);
extern void elm_calendar_date_min_set(Elm_Calendar *obj, const Efl_Time *min);
extern const Efl_Time *elm_calendar_date_min_get(const Elm_Calendar *obj);
extern void elm_calendar_date_max_set(Elm_Calendar *obj, const Efl_Time *max);
extern const Efl_Time *elm_calendar_date_max_get(const Elm_Calendar *obj);
extern void elm_calendar_selected_time_set(Elm_Calendar *obj, Efl_Time *selected_time);
extern Eina_Bool elm_calendar_selected_time_get(const Elm_Calendar *obj, Efl_Time *selected_time);
extern Elm_Calendar_Mark *elm_calendar_mark_add(Elm_Calendar *obj, const char *mark_type, Efl_Time *mark_time, Elm_Calendar_Mark_Repeat_Type repeat);
extern void elm_calendar_marks_clear(Elm_Calendar *obj);
extern void elm_calendar_marks_draw(Elm_Calendar *obj);