Package_Tools/include-C/efl/fertig/elementary-1/inarbeit/fertig/elm_calendar_eo_legacy.pp


procedure elm_calendar_first_day_of_week_set(obj:PElm_Calendar; day:TElm_Calendar_Weekday);cdecl;external;
{*
 * @brief The first day of week to use on calendar widgets'.
 *
 * @param[in] obj The object.
 *
 * @return Weekday enum value, see @ref Elm_Calendar_Weekday
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
function elm_calendar_first_day_of_week_get(obj:PElm_Calendar):TElm_Calendar_Weekday;cdecl;external;
{*
 * @brief Define which fields of a tm struct will be taken into account, when
 * Elm.Calendar.selected_time.set is invoked.
 *
 * By Default the bitmask is set to use all fields of a tm struct (year, month
 * and day of the month).
 *
 * See also @ref elm_calendar_selected_time_set.
 *
 * @param[in] obj The object.
 * @param[in] selectable A bitmask of Elm_Calendar_Selectable
 *
 * @since 1.8
 *
 * @ingroup Elm_Calendar_Group
  }
procedure elm_calendar_selectable_set(obj:PElm_Calendar; selectable:TElm_Calendar_Selectable);cdecl;external;
{*
 * @brief Define which fields of a tm struct will be taken into account, when
 * Elm.Calendar.selected_time.set is invoked.
 *
 * By Default the bitmask is set to use all fields of a tm struct (year, month
 * and day of the month).
 *
 * See also @ref elm_calendar_selected_time_set.
 *
 * @param[in] obj The object.
 *
 * @return A bitmask of Elm_Calendar_Selectable
 *
 * @since 1.8
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
function elm_calendar_selectable_get(obj:PElm_Calendar):TElm_Calendar_Selectable;cdecl;external;
{*
 * @brief The interval on time updates for a user mouse button hold on
 * calendar widgets' month/year selection.
 *
 * This interval value is decreased while the user holds the mouse pointer
 * either selecting next or previous month/year.
 *
 * This helps the user to get to a given month distant from the current one
 * easier/faster, as it will start to change quicker and quicker on mouse
 * button holds.
 *
 * The calculation for the next change interval value, starting from the one
 * set with this call, is the previous interval divided by 1.05, so it
 * decreases a little bit.
 *
 * The default starting interval value for automatic changes is 0.85 seconds.
 *
 * @param[in] obj The object.
 * @param[in] interval The (first) interval value in seconds
 *
 * @ingroup Elm_Calendar_Group
  }
procedure elm_calendar_interval_set(obj:PElm_Calendar; interval:Tdouble);cdecl;external;
{*
 * @brief The interval on time updates for a user mouse button hold on
 * calendar widgets' month/year selection.
 *
 * This interval value is decreased while the user holds the mouse pointer
 * either selecting next or previous month/year.
 *
 * This helps the user to get to a given month distant from the current one
 * easier/faster, as it will start to change quicker and quicker on mouse
 * button holds.
 *
 * The calculation for the next change interval value, starting from the one
 * set with this call, is the previous interval divided by 1.05, so it
 * decreases a little bit.
 *
 * The default starting interval value for automatic changes is 0.85 seconds.
 *
 * @param[in] obj The object.
 *
 * @return The (first) interval value in seconds
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
function elm_calendar_interval_get(obj:PElm_Calendar):Tdouble;cdecl;external;
{*
 * @brief Weekdays names to be displayed by the calendar.
 *
 * By default, weekdays abbreviations get from system are displayed: E.g. for
 * an en_US locale: "Sun, Mon, Tue, Wed, Thu, Fri, Sat"
 *
 * The first string should be related to Sunday, the second to Monday...
 *
 * See also @ref elm_calendar_weekdays_names_get.
 *
 * @ref calendar_example_02. @ref calendar_example_05.
 *
 * @param[in] obj The object.
 * @param[in] weekdays Array of seven strings to be used as weekday names.
 * Warning: It must have 7 elements, or it will access invalid memory. Warning:
 * The strings must be @c null terminated ('@\0').
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
procedure elm_calendar_weekdays_names_set(obj:PElm_Calendar; weekdays:PPchar);cdecl;external;
{*
 * @brief Weekdays names to be displayed by the calendar.
 *
 * By default, weekdays abbreviations get from system are displayed: E.g. for
 * an en_US locale: "Sun, Mon, Tue, Wed, Thu, Fri, Sat"
 *
 * The first string should be related to Sunday, the second to Monday...
 *
 * See also @ref elm_calendar_weekdays_names_get.
 *
 * @ref calendar_example_02. @ref calendar_example_05.
 *
 * @param[in] obj The object.
 *
 * @return Array of seven strings to be used as weekday names. Warning: It must
 * have 7 elements, or it will access invalid memory. Warning: The strings must
 * be @c null terminated ('@\0').
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
(* Const before type ignored *)
function elm_calendar_weekdays_names_get(obj:PElm_Calendar):^Pchar;cdecl;external;
{*
 * @brief Select day mode to use.
 *
 * The day selection mode used.
 *
 * @param[in] obj The object.
 * @param[in] mode The select mode to use.
 *
 * @ingroup Elm_Calendar_Group
  }
procedure elm_calendar_select_mode_set(obj:PElm_Calendar; mode:TElm_Calendar_Select_Mode);cdecl;external;
{*
 * @brief Select day mode to use.
 *
 * The day selection mode used.
 *
 * @param[in] obj The object.
 *
 * @return The select mode to use.
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
function elm_calendar_select_mode_get(obj:PElm_Calendar):TElm_Calendar_Select_Mode;cdecl;external;
{*
 * @brief Set a function to format the string that will be used to display
 * month and year;
 *
 * By default it uses strftime with "%B %Y" format string. It should allocate
 * the memory that will be used by the string, that will be freed by the widget
 * after usage. A pointer to the string and a pointer to the time struct will
 * be provided.
 *
 * @ref calendar_example_02.
 *
 * @param[in] obj The object.
 * @param[in] format_function Function to set the month-year string given the
 * selected date.
 *
 * @ingroup Elm_Calendar_Group
  }
procedure elm_calendar_format_function_set(obj:PElm_Calendar; format_function:TElm_Calendar_Format_Cb);cdecl;external;
{*
 * @brief Get a list of all the calendar marks.
 *
 * See also @ref elm_calendar_mark_add, @ref Elm.Calendar.mark_del(),
 * @ref elm_calendar_marks_clear.
 *
 * @param[in] obj The object.
 *
 * @return List with all calendar marks
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
(* Const before type ignored *)
function elm_calendar_marks_get(obj:PElm_Calendar):PEina_List;cdecl;external;
{*
 * @brief Minimum date on calendar.
 *
 * See also @ref elm_calendar_date_max_set, @ref elm_calendar_date_max_get
 *
 * Set minimum date on calendar.
 *
 * Set the minimum date, changing the displayed month or year if needed.
 * Displayed day also to be disabled if it is smaller than minimum date.
 *
 * @param[in] obj The object.
 * @param[in] min A tm struct to point to minimum date.
 *
 * @since 1.19
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
procedure elm_calendar_date_min_set(obj:PElm_Calendar; min:PEfl_Time);cdecl;external;
{*
 * @brief Minimum date on calendar.
 *
 * See also @ref elm_calendar_date_max_set, @ref elm_calendar_date_max_get
 *
 * Get minimum date.
 *
 * Default value is 1 JAN,1902.
 *
 * @param[in] obj The object.
 *
 * @return A tm struct to point to minimum date.
 *
 * @since 1.19
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
(* Const before type ignored *)
function elm_calendar_date_min_get(obj:PElm_Calendar):PEfl_Time;cdecl;external;
{*
 * @brief Maximum date on calendar.
 *
 * See also @ref elm_calendar_date_min_set, @ref elm_calendar_date_min_get
 *
 * Set maximum date on calendar.
 *
 * Set the maximum date, changing the displayed month or year if needed.
 * Displayed day also to be disabled if it is bigger than maximum date.
 *
 * @param[in] obj The object.
 * @param[in] max A tm struct to point to maximum date.
 *
 * @since 1.19
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
procedure elm_calendar_date_max_set(obj:PElm_Calendar; max:PEfl_Time);cdecl;external;
{*
 * @brief Maximum date on calendar.
 *
 * See also @ref elm_calendar_date_min_set, @ref elm_calendar_date_min_get
 *
 * Get maximum date.
 *
 * Default maximum year is -1. Default maximum day and month are 31 and DEC.
 *
 * If the maximum year is a negative value, it will be limited depending on the
 * platform architecture (year 2037 for 32 bits);
 *
 * @param[in] obj The object.
 *
 * @return A tm struct to point to maximum date.
 *
 * @since 1.19
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
(* Const before type ignored *)
function elm_calendar_date_max_get(obj:PElm_Calendar):PEfl_Time;cdecl;external;
{*
 * @brief Set selected date to be highlighted on calendar.
 *
 * Set the selected date, changing the displayed month if needed. Selected date
 * changes when the user goes to next/previous month or select a day pressing
 * over it on calendar.
 *
 * See also @ref elm_calendar_selected_time_get.
 *
 * @ref calendar_example_04
 *
 * @param[in] obj The object.
 * @param[in] selected_time A tm struct to represent the selected date.
 *
 * @ingroup Elm_Calendar_Group
  }
procedure elm_calendar_selected_time_set(obj:PElm_Calendar; selected_time:PEfl_Time);cdecl;external;
{*
 * @brief Get selected date.
 *
 * Get date selected by the user or set by function
 * @ref elm_calendar_selected_time_set(). Selected date changes when the user
 * goes to next/previous month or select a day pressing over it on calendar.
 *
 * See also @ref elm_calendar_selected_time_get.
 *
 * @ref calendar_example_05.
 *
 * @param[in] obj The object.
 * @param[in,out] selected_time A tm struct to point to selected date.
 *
 * @return @c true if the method succeeded, @c false otherwise
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
function elm_calendar_selected_time_get(obj:PElm_Calendar; selected_time:PEfl_Time):TEina_Bool;cdecl;external;
{*
 * @brief Add a new mark to the calendar
 *
 * Add a mark that will be drawn in the calendar respecting the insertion time
 * and periodicity. It will emit the type as signal to the widget theme.
 * Default theme supports "holiday" and "checked", but it can be extended.
 *
 * It won't immediately update the calendar, drawing the marks. For this,
 * @ref elm_calendar_marks_draw(). However, when user selects next or previous
 * month calendar forces marks drawn.
 *
 * Marks created with this method can be deleted with
 * @ref Elm.Calendar.mark_del().
 *
 * See also @ref elm_calendar_marks_draw, @ref Elm.Calendar.mark_del().
 *
 * @ref calendar_example_06
 *
 * @param[in] obj The object.
 * @param[in] mark_type A string used to define the type of mark. It will be
 * emitted to the theme, that should display a related modification on these
 * days representation.
 * @param[in] mark_time A time struct to represent the date of inclusion of the
 * mark. For marks that repeats it will just be displayed after the inclusion
 * date in the calendar.
 * @param[in] repeat Repeat the event following this periodicity. Can be a
 * unique mark (that don't repeat), daily, weekly, monthly or annually.
 *
 * @return The newly added calendar mark
 *
 * @ingroup Elm_Calendar_Group
  }
(* Const before type ignored *)
function elm_calendar_mark_add(obj:PElm_Calendar; mark_type:Pchar; mark_time:PEfl_Time; _repeat:TElm_Calendar_Mark_Repeat_Type):PElm_Calendar_Mark;cdecl;external;
{*
 * @brief Remove all calendar's marks
 *
 * See also  @ref elm_calendar_mark_add, @ref Elm.Calendar.mark_del().
 * @param[in] obj The object.
 *
 * @ingroup Elm_Calendar_Group
  }
procedure elm_calendar_marks_clear(obj:PElm_Calendar);cdecl;external;
